# promptbox

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  oranda.json
.github/workflows/: release.yml
prompts/: README.md  ask.pb.toml  codellama-fill.pb.toml  docode.pb.toml  promptbox.toml  rewrite.pb.toml  summarize.liquid  summarize.pb.toml
public/: artifacts.json  changelog.rss  index.html  promptbox-installer.ps1.txt  promptbox-installer.sh.txt
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
public/changelog/v0.1.1/: index.html
public/changelog/v0.1.2/: index.html
public/changelog/v0.2.0/: index.html
public/changelog/v0.3.0/: index.html
public/changelog/v0.3.1/: index.html
src/: args.rs  cache.rs  chat_template.rs  config.rs  context.rs  error.rs  global_config.rs  image.rs  main.rs  model.rs  ollama.rs  openai.rs  option.rs  requests.rs  template.rs  tests.rs  tracing.rs
src/hosts/: mod.rs  ollama.rs  openai.rs  together.rs
test_data/: all_model_options.pb.toml  dominant-colors.pb.toml  extra_template_arg.pb.toml  images.pb.toml  missing_template_path.pb.toml  normal.pb.toml  promptbox.toml  simple.pb.toml  system_prompt.liquid  system_prompt.pb.toml  system_prompt_in_file.pb.toml  template_path.liquid  template_path.pb.toml  test2.txt
test_data/intermediate_without_config/leaf_dir_with_config/: promptbox.toml
test_data/malformed_config/: promptbox.toml
test_data/malformed_template/: malformed_template.pb.toml
test_data/override_template/: promptbox.toml  tmp.pb.toml
test_data/override_template/override/: tmp.pb.toml
test_data/param_resolve/: promptbox.toml
test_data/subdir_without_config/: indir.pb.toml
test_data/toplevel_config/: promptbox.toml
