[package]
name = "promptbox"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env", "string"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
error-stack = "0.4.1"
flume = "0.11.0"
itertools = "0.11.0"
liquid = "0.26.4"
rusqlite = { version = "0.29.0", features = ["bundled", "modern-full"] }
rusqlite_migration = "1.0.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
toml = "0.8.6"
ureq = { version = "2.8.0", features = ["serde_json", "json"] }

[profile.release]
debug = 1
